ARROW-2227: [Python] Fix off-by-one error in chunked binary conversions

We were already testing the chunked behavior but we did not exercise the off-by-one error edge case

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #1740 from wesm/ARROW-2227 and squashes the following commits:

fd1ab178 <Wes McKinney> Move constexpr to builder.h, add constexpr for max # of list elements
ca5ecc0f <Wes McKinney> Fix off-by-one error in chunked binary conversions